WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307610
AX: VoiceOver does not find focusable splitters when searching for next / previous form control
https://bugs.webkit.org/show_bug.cgi?id=307610
Summary
AX: VoiceOver does not find focusable splitters when searching for next / pre...
Tyler Wilcock
Reported
2026-02-11 16:57:17 PST
Example webpage:
https://www.saltdesignsystem.com/salt/components/splitter/examples
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-11 16:57:24 PST
<
rdar://problem/170187464
>
Tyler Wilcock
Comment 2
2026-02-11 17:03:28 PST
Chrome behaves correctly here.
Tyler Wilcock
Comment 3
2026-02-11 17:14:00 PST
Also, based on us not handling AccessibilityRole::Splitter here: void AccessibilityNodeObject::alterRangeValue(StepAction stepAction) { if (role() != AccessibilityRole::Slider && role() != AccessibilityRole::SpinButton) return; I'd be surprised if we can increment / decrement these controls on iOS.
Tyler Wilcock
Comment 4
2026-02-12 10:17:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58521
EWS
Comment 5
2026-02-23 17:07:18 PST
Committed
308089@main
(6eedfadfa328): <
https://commits.webkit.org/308089@main
> Reviewed commits have been landed. Closing PR #58521 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug