AX: VoiceOver does not find focusable splitters when searching for next / previous form control https://bugs.webkit.org/show_bug.cgi?id=307610 rdar://170187464

Reviewed by Joshua Hoffman.

When VoiceOver searches for form controls using AXControlSearchKey, it uses isControl()
to match elements. Focusable separators (role="separator" with tabindex) and ARIA
spinbuttons (role="spinbutton") were not being found because isControl() didn't include
these roles.

This change:
1. Adds SpinButton to isControl() since ARIA spinbuttons are interactive form controls
2. Adds focusable splitters to isControl() following the existing supportsRangeValue() pattern

* LayoutTests/accessibility/search-for-focusable-separator-and-spinbutton-expected.txt: Added.
* LayoutTests/accessibility/search-for-focusable-separator-and-spinbutton.html: Added.
* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/accessibility/AXCoreObject.cpp:
(WebCore::AXCoreObject::isControl const):
(WebCore::AXCoreObject::supportsRangeValue const):
* Source/WebCore/accessibility/AXCoreObject.h:
(WebCore::AXCoreObject::isFocusableSplitter const):
* Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeNames]):

Canonical link: https://commits.webkit.org/308089@main