Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm
@@ -945,7 +945,13 @@ ALLOW_DEPRECATED_IMPLEMENTATIONS_BEGIN
         objectAttributes = popupOrToggleButtonAttrs.get().get();
     else if (backingObject->isButton())
         objectAttributes = buttonAttrs.get().get();
-    else if (backingObject->isControl())
+    // Spinbuttons have their own attributes, so check before the generic isControl().
+    else if (backingObject->isSpinButton()) {
+        if (backingObject->spinButtonType() == SpinButtonType::Composite)
+            objectAttributes = compositeSpinButtonAttributes.get().get();
+        else
+            objectAttributes = spinButtonCommonAttributes.get().get();
+    } else if (backingObject->isControl())
         objectAttributes = controlAttrs.get().get();
 
     else if (backingObject->isGroup() || backingObject->isListItem() || backingObject->role() == AccessibilityRole::Figure)
@@ -954,12 +960,7 @@ ALLOW_DEPRECATED_IMPLEMENTATIONS_BEGIN
         objectAttributes = tabListAttrs.get().get();
     else if (backingObject->isScrollArea())
         objectAttributes = scrollViewAttrs.get().get();
-    else if (backingObject->isSpinButton()) {
-        if (backingObject->spinButtonType() == SpinButtonType::Composite)
-            objectAttributes = compositeSpinButtonAttributes.get().get();
-        else
-            objectAttributes = spinButtonCommonAttributes.get().get();
-    } else if (backingObject->isMenu())
+    else if (backingObject->isMenu())
         objectAttributes = menuAttrs.get().get();
     else if (backingObject->isMenuBar())
         objectAttributes = menuBarAttrs.get().get();
